Add basic ngx_postgres setup

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,6 @@
 user  www-data;
 worker_processes  1;
 
-error_log  logs/error.log;
-error_log  logs/error.log  notice;
 error_log  logs/error.log  debug;
 
 #pid        logs/nginx.pid;
@@ -21,5 +19,6 @@ http {
     sendfile on;
 
     keepalive_timeout  65;
+    # include /etc/nginx/naxsi_core.rules;
     include sites-enabled/*;
 }
