--- a/nginx.conf
+++ b/nginx.conf
@@ -14,11 +14,11 @@ events {
 
 http {
     include mime.types;
-    default_type  application/octet-stream;
+    default_type  text/plain;
 
     sendfile on;
 
     keepalive_timeout  65;
-    # include /etc/nginx/naxsi_core.rules;
+    include /etc/nginx/naxsi_core.rules;
     include sites-enabled/*;
 }
